# OpenDisasm

./: .gitignore  .project  .travis.yml  Cargo.toml  README.md  build.gradle  gdb.sh  pom.xml  result.txt  settings.gradle
.github/workflows/: build-test.yml  clippy.yml  rustfmt.yml
compression/: build.gradle
core/: Cargo.toml  build.gradle
core/src/: lib.rs
disassemblers/elf/: Cargo.toml
disassemblers/elf/src/: lib.rs
elf/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
gui/iced/: Cargo.toml
gui/iced/src/: main.rs
java-class/: build.gradle
modules/elf/: Cargo.toml
modules/elf/src/: lib.rs
od_core/: Cargo.toml
od_core/src/: lib.rs  structure.rs
od_gui/: Cargo.toml
od_gui/src/: main.rs
od_gui_egui/: Cargo.toml
od_gui_egui/src/: main.rs
od_gui_iced/: Cargo.toml
od_gui_iced/src/: main.rs
od_gui_slint/: Cargo.toml  build.rs
od_gui_slint/src/: main.rs
od_gui_slint/ui/: main.slint
od_interface/: Cargo.toml
od_interface/src/: lib.rs
selftest/: build.gradle
selftest-wrapper/: build.gradle
src/com/lightning/opendisasm/detector/: Detector.java  ELFDetector.java
src/com/lightning/opendisasm/disasm/: DisassembledFile.java  ELFDisassembler.java
src/com/lightning/opendisasm/ui/: CLIMain.java
src/com/lightning/opendisasm/util/: BytewiseReader.java
src/main/java/com/lightning/opendisasm/detector/: ClassFileDetector.java  Detector.java  DetectorBase.java  ELFDetector.java  SWFDetector.java
src/main/java/com/lightning/opendisasm/disasm/: DisassembledFile.java  Disassembler.java  ELFDisassembler.java  EnumNamer.java
src/main/java/com/lightning/opendisasm/tree/: MetadataNode.java  (+5 more)
swf/: build.gradle
ui/: build.gradle
ui/src/main/java/com.lightning.opendisasm.ui/: CLIMain.java  GUIMain.java
ui/src/main/java/com.lightning.opendisasm.ui/gui/: GUIFrame.java  GUITreeViewFrame.java
(+116 files in other folders)
