[package]
name = "od_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
od_interface = { path = "../od_interface" }
xlang_abi = { git = "https://github.com/LightningCreations/lccc" }
xlang_host = "0.1.0"
