[package]
name = "od_gui_slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
od_core = { path = "../od_core" }
slint = { git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
