[package]
name = "od_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
xlang_abi = { git = "https://github.com/LightningCreations/lccc" }
xlang_host = "0.1.0"

[lib]
crate-type=["cdylib"]
