[package]
name = "od_module_elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
od_core = { path = "../../od_core" }
xlang_abi = "0.1.4"
xlang_host = "0.1.0"

[lib]
crate-type = ["cdylib"]
